test/tests/stages/8_loops/valid/extra_credit/switch_default.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[48]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  switch
  (
  identifier(a)
  )
  {
  case
  const int(1)
  :
  return
  const int(1)
  ;
  case
  const int(2)
  :
  return
  const int(9)
  ;
  case
  const int(4)
  :
  identifier(a)
  =
  const int(11)
  ;
  break
  ;
  default
  :
  identifier(a)
  =
  const int(22)
  ;
  }
  return
  identifier(a)
  ;
  }
