test/tests/stages/8_loops/invalid_semantics/extra_credit/duplicate_case.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[36]:
  int
  identifier(main)
  (
  void
  )
  {
  switch
  (
  const int(4)
  )
  {
  case
  const int(5)
  :
  return
  const int(0)
  ;
  case
  const int(4)
  :
  return
  const int(1)
  ;
  case
  const int(5)
  :
  return
  const int(0)
  ;
  default
  :
  return
  const int(2)
  ;
  }
  }
